--- a/LaserRadar/Robot/app/src/main/res/layout/activity_card.xml
+++ b/LaserRadar/Robot/app/src/main/res/layout/activity_card.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/white"
+    android:background="#EEEEEE"
     >
 
     <RelativeLayout
@@ -17,7 +17,7 @@
             android:layout_marginLeft="10dp"
             android:layout_centerVertical="true"
             android:layout_width="17dp"
-            android:layout_height="32dp" />
+            android:layout_height="21dp" />
         <TextView
             android:id="@+id/title"
             android:layout_width="match_parent"
@@ -29,12 +29,22 @@
             android:layout_alignParentTop="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true" />
+        <Button
+            android:id="@+id/add_card"
+            android:layout_width="23dp"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="10dp"
+            android:layout_height="23dp"
+            android:background="@animator/btn_add_desk_selector"
+            />
     </RelativeLayout>
 
     <ListView
         android:id="@+id/cardlist"
         android:divider="#EEEEEE"
-        android:dividerHeight = "5dp"
+        android:dividerHeight = "1dp"
+        android:background="@color/white"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
