--- a/LaserRadar/Robot/app/src/main/res/layout/activity_cardactivity.xml
+++ b/LaserRadar/Robot/app/src/main/res/layout/activity_cardactivity.xml
@@ -28,73 +28,99 @@
             android:layout_alignParentTop="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true" />
+        <Button
+            android:id="@+id/btn_delete"
+            android:layout_width="wrap_content"
+            android:text="@string/btn_delete"
+            android:textColor="@animator/btn_delete_selector"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="10dp"
+            android:textSize="17sp"
+            android:layout_centerVertical="true"
+            android:background="@null"
+            android:layout_height="wrap_content"
+            />
     </RelativeLayout>
-
-    <RelativeLayout
+    <View
         android:layout_width="match_parent"
-        android:layout_height="60dp">
+        android:layout_height="1dp"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:background="@color/white"
+        android:layout_height="53dp">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:text="@string/name"
+            android:layout_marginLeft="10dp"
+            android:gravity="center_vertical"
+            android:background="@color/white"
+            android:textColor="#333333"
+            android:textSize="15sp"
+            android:id="@+id/textView2" />
+
         <EditText
             android:id="@+id/cardname"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:hint="@string/add_card"
-            android:gravity="right|center_vertical"
-            android:textColor="@color/black"
-            android:layout_marginLeft="120dp"
-            />
-        <TextView
-            android:layout_width="120dp"
-            android:layout_height="match_parent"
-            android:text="@string/name"
-            android:gravity="center_vertical"
+            android:gravity="left|center_vertical"
+            android:layout_marginLeft="13dp"
             android:background="@color/white"
+            android:textSize="15sp"
             android:textColor="@color/black"
-            android:textSize="17sp"
-            android:id="@+id/textView2" />
-    </RelativeLayout>
-    <RelativeLayout
+            />
+    </LinearLayout>
+    <View
         android:layout_width="match_parent"
-        android:layout_height="60dp">
+        android:layout_height="1dp"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:background="@color/white"
+        android:orientation="horizontal"
+        android:layout_height="53dp">
         <TextView
-            android:layout_width="120dp"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:text="@string/card_address"
-            android:textColor="@color/black"
+            android:layout_marginLeft="10dp"
+            android:textColor="#333333"
             android:background="@color/white"
             android:gravity="center_vertical"
-            android:textSize="17sp"
+            android:textSize="15sp"
             />
         <EditText
             android:id="@+id/cardaddress"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:textColor="@color/black"
+            android:background="@color/white"
             android:inputType="number"
-            android:gravity="right|center_vertical"
-            android:layout_marginLeft="120dp"
+            android:layout_marginLeft="13dp"
+            android:textSize="15sp"
+            android:gravity="left|center_vertical"
             />
-    </RelativeLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal">
+    </LinearLayout>
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"/>
+    <LinearLayout
+        android:layout_marginTop="53dp"
+        android:layout_width="match_parent"
+        android:layout_height="46dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:orientation="horizontal">
         <Button
             android:id="@+id/btn_sure"
             android:layout_width="match_parent"
-            android:text="@string/btn_sure"
             android:layout_weight="1"
             android:textSize="17sp"
-            android:background="@color/white"
-            android:layout_height="60dp" />
+            android:background="@animator/btn_sure_selector"
+            android:layout_height="46dp" />
 
-        <Button
-            android:id="@+id/btn_delete"
-            android:layout_width="match_parent"
-            android:text="@string/btn_delete"
-            android:textSize="17sp"
-            android:background="@color/white"
-            android:layout_weight="1"
-            android:layout_height="60dp" />
+
     </LinearLayout>
 </LinearLayout>
