--- a/LaserRadar/Robot/app/src/main/res/layout/activity_config.xml
+++ b/LaserRadar/Robot/app/src/main/res/layout/activity_config.xml
@@ -18,7 +18,7 @@
             android:layout_marginLeft="10dp"
             android:layout_centerVertical="true"
             android:layout_width="17dp"
-            android:layout_height="32dp" />
+            android:layout_height="21dp" />
         <TextView
             android:id="@+id/title"
             android:layout_width="match_parent"
@@ -27,11 +27,11 @@
             android:gravity="center"
             android:layout_centerInParent="true"
             android:textColor="@color/white"
-            android:text="@string/desk_settings"
+            android:text="@string/deskname_setting"
             />
         <Button
             android:background="@color/green"
-            android:textColor="@color/white"
+            android:textColor="@animator/btn_delete_selector"
             android:id="@+id/btn_delete"
             android:layout_marginRight="5dp"
             android:textSize="18sp"
@@ -46,106 +46,128 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         >
-        <View
-            android:layout_width="match_parent"
-            android:background="@color/black"
-            android:layout_height="0.5dp"/>
         <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="@dimen/desk_text_height">
+            android:layout_width="match_parent"
+            android:layout_marginLeft="10dp"
+            android:layout_height="33dp">
             <TextView
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:textSize="18sp"
+                android:textSize="12sp"
                 android:gravity="center"
-                android:textColor="@color/black"
-                android:text="@string/deskname_setting"/>
+                android:textColor="#999999"
+                android:text="设置桌名"/>
         </LinearLayout>
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="60dp">
+            android:layout_height="53dp">
             <View
                 android:layout_width="match_parent"
-                android:layout_height="0.5dp"/>
+                android:layout_height="1dp"/>
             <RelativeLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+                android:layout_width="match_parent"
+                android:background="@color/white"
+                android:layout_height="53dp">
                 <EditText
                     android:id="@+id/deskname"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:hint="@string/add_desk"
-                    android:textSize="@dimen/robot_size"
-                    android:textColorHint="@color/aliceblue"
+                    android:hint="*必填"
+                    android:textSize="15sp"
+                    android:layout_marginLeft="10dp"
+                    android:background="@null"
+                    android:layout_marginRight="80dp"
+                    android:maxLength="3"
+                    android:textColorHint="#666666"
                     android:textColor="@color/black"
-                    android:layout_toLeftOf="@+id/change_name"
                     />
                 <Button
                     android:id="@+id/change_name"
-                    android:layout_width="110dp"
-                    android:layout_marginLeft="10dp"
-                    android:background="@color/white"
+                    android:layout_width="wrap_content"
+                    android:background="@null"
+                    android:layout_marginRight="10dp"
+                    android:textColor="@animator/btn_sure_desk_selector"
                     android:layout_alignParentRight="true"
                     android:layout_height="match_parent"
-                    android:textSize="22sp"
+                    android:textSize="17sp"
                     android:text="@string/btn_sure"
                     />
             </RelativeLayout>
         </LinearLayout>
         <View
             android:layout_width="match_parent"
-            android:background="#EEEEEE"
-            android:layout_height="0.5dp"/>
+            android:layout_height="5dp"/>
 
-        <Button
+        <RelativeLayout
             android:id="@+id/card"
-            android:text="@string/card_settings"
+            android:layout_width="match_parent"
             android:background="@color/white"
-            android:layout_gravity="center"
-            android:layout_width="200dp"
-            android:textSize="22sp"
-            android:layout_height="60dp" />
+            android:layout_height="53dp">
+            <TextView
+                android:text="@string/card_settings"
+                android:layout_width="wrap_content"
+                android:textSize="15sp"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:textColor="#333333"
+                android:layout_height="wrap_content" />
+
+            <ImageView
+                android:layout_width="7dp"
+                android:layout_height="13dp"
+                android:background="@mipmap/xyb"
+                android:layout_centerVertical="true"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true"
+                android:layout_marginRight="10dp"
+                />
+        </RelativeLayout>
 
         <View
             android:layout_width="match_parent"
-            android:background="#EEEEEE"
-            android:layout_height="0.5dp"/>
+            android:layout_height="1dp"/>
         <LinearLayout
             android:orientation="horizontal"
+            android:layout_marginTop="5dp"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/desk_text_height">
+            android:background="@color/white"
+            android:layout_height="43dp">
+
             <TextView
                 android:id="@+id/tv01"
                 android:layout_weight="1"
                 android:layout_width="0dp"
                 android:gravity="center"
-                android:textColor="@color/red"
+                android:textColor="@color/desk_yellow"
                 android:layout_height="match_parent"
                 android:text="@string/command_settings"
-                android:textSize="18sp"
+                android:textSize="15sp"
                 />
+
             <TextView
                 android:id="@+id/tv02"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:textColor="@color/black"
+                android:textColor="#333333"
                 android:text="@string/added_settings"
-                android:textSize="18sp" />
+                android:textSize="15sp" />
         </LinearLayout>
         <ImageView
             android:id="@+id/iv_tab_bottom_img"
-            android:layout_width="wrap_content"
-            android:layout_height="2dp"
+            android:layout_width="180dp"
+            android:layout_height="1dp"
+            android:background="@color/desk_yellow"
             android:scaleType="matrix"
-            android:src="@mipmap/huakuai01" />
+            />
     </LinearLayout>
 
     <android.support.v4.view.ViewPager
         android:id="@+id/vPager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="#ffffff" />
+        android:layout_height="wrap_content"
+        android:background="#FFFFFF" />
 </LinearLayout>
