--- a/LaserRadar/Robot/app/src/main/res/layout/activity_robot_config.xml
+++ b/LaserRadar/Robot/app/src/main/res/layout/activity_robot_config.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/white"
+    android:background="#EEEEEE"
     tools:context="com.android.jdrd.robot.activity.MainActivity">
     <RelativeLayout
         android:id="@+id/main"
@@ -18,89 +18,111 @@
             android:background="@drawable/btn_back_selector"
             android:layout_centerVertical="true"
             android:layout_width="17dp"
-            android:layout_height="32dp" />
+            android:layout_height="21dp" />
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:textSize="25sp"
+            android:textSize="17sp"
             android:gravity="center"
             android:layout_centerInParent="true"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:text="@string/robot_settings"
             />
         <Button
             android:id="@+id/sure"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_width="36dp"
+            android:layout_height="36dp"
+            android:layout_marginRight="10dp"
+            android:layout_centerInParent="true"
             android:layout_alignParentRight="true"
+            android:textSize="17sp"
+            android:textColor="@animator/btn_delete_selector"
+            android:background="@null"
             android:text="@string/btn_sure"
             />
     </RelativeLayout>
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
+            android:background="#EEEEEE"
             android:layout_height="wrap_content"
             >
             <View
                 android:layout_width="match_parent"
-                android:background="@color/black"
-                android:layout_height="0.5dp"/>
+                android:layout_height="1dp"/>
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="60dp">
+                android:background="#EEEEEE"
+                android:orientation="vertical"
+                android:layout_height="86dp">
                 <TextView
-                    android:layout_width="120dp"
-                    android:textSize="@dimen/robot_size"
+                    android:layout_width="wrap_content"
+                    android:textSize="12sp"
                     android:gravity="center"
-                    android:textColor="@color/black"
-                    android:layout_height="match_parent"
+                    android:textColor="#999999"
+                    android:layout_marginLeft="10dp"
+                    android:layout_height="33dp"
                     android:text="@string/name"/>
                 <EditText
                     android:id="@+id/name"
                     android:layout_width="match_parent"
                     android:textSize="@dimen/robot_size"
-                    android:gravity="center"
-                    android:textColor="@color/black"
+                    android:paddingLeft="10dp"
+                    android:maxLength="5"
+                    android:background="@color/white"
+                    android:gravity="center|left"
+                    android:textColor="#666666"
                     android:layout_height="match_parent"
                     />
             </LinearLayout>
-            <View
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:background="@color/black"
-                android:layout_height="0.5dp"/>
-            <View
-                android:layout_width="match_parent"
-                android:background="@color/black"
-                android:layout_height="0.5dp"/>
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="60dp">
+                android:orientation="vertical"
+                android:background="#EEEEEE"
+                android:layout_height="86dp">
                 <TextView
-                    android:layout_width="120dp"
-                    android:textSize="@dimen/robot_size"
+                    android:layout_width="wrap_content"
+                    android:textSize="12sp"
+                    android:layout_marginLeft="10dp"
                     android:gravity="center"
-                    android:textColor="@color/black"
-                    android:layout_height="match_parent"
+                    android:textColor="#999999"
+                    android:layout_height="33dp"
                     android:text="@string/area"
                     android:id="@+id/textView4" />
-                <Spinner
+                <RelativeLayout
                     android:id="@+id/area"
                     android:layout_width="match_parent"
                     android:background="@color/white"
-                    android:layout_height="match_parent"
-                    android:layout_alignParentTop="true"
-                    android:layout_centerVertical="true"
-                    android:gravity="center"
-                    android:layout_toRightOf="@+id/textView4"
-                    android:layout_toEndOf="@+id/textView4" />
-            </RelativeLayout>
-            <View
-                android:layout_width="match_parent"
-                android:background="@color/black"
-                android:layout_height="0.5dp"/>
+                    android:layout_height="match_parent">
+                    <TextView
+                        android:id="@+id/area_text"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:textSize="15sp"
+                        android:textColor="#333333"
+                        android:gravity="center"
+                        android:layout_marginLeft="10dp"
+                        android:text="区域"/>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_alignParentRight="true"
+                        android:layout_marginRight="25dp"
+                        android:textSize="15sp"
+                        android:textColor="#999999"
+                        android:gravity="center"
+                        android:text="必选"/>
+                    <ImageView
+                        android:layout_width="7dp"
+                        android:layout_height="13dp"
+                        android:layout_alignParentRight="true"
+                        android:textSize="15sp"
+                        android:layout_marginRight="6dp"
+                        android:background="@mipmap/xyb"
+                        android:textColor="#999999"
+                        android:layout_centerVertical="true"
+                        android:text="必选"/>
+                </RelativeLayout>
+            </LinearLayout>
         </LinearLayout>
-    </ScrollView>
 </LinearLayout>
