--- a/LaserRadar/Robot/app/src/main/res/layout/desk_item.xml
+++ b/LaserRadar/Robot/app/src/main/res/layout/desk_item.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="85dp"
-    android:layout_height="85dp"
+    android:layout_width="106dp"
+    android:layout_height="106dp"
     android:orientation="vertical"
     android:gravity="center"
     android:background="@color/white"
     >
     <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_width="106dp"
+        android:layout_height="106dp">
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
@@ -24,19 +24,31 @@
             android:layout_height="match_parent"
             android:background="#EEEEEE"/>
         <ImageView
+            android:id="@+id/bjzt"
+            android:layout_width="10dp"
+            android:layout_height="10dp"
+            android:layout_alignParentRight="true"
+            android:background="@mipmap/bjzt"
+            />
+        <ImageView
+            android:layout_width="70dp"
+            android:layout_centerInParent="true"
+            android:background="@animator/btn_desk_selector"
+            android:layout_height="70dp" />
+        <ImageView
             android:id="@+id/image"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@mipmap/kongxian02"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:layout_centerInParent="true"
             />
         <TextView
             android:id="@+id/name"
             android:layout_centerInParent="true"
-            android:layout_width="match_parent"
-            android:text="@string/btn_sure"
+            android:layout_width="70dp"
             android:gravity="center"
-            android:textSize="25sp"
-            android:layout_height="match_parent" />
+            android:textColor="#666666"
+            android:textSize="15sp"
+            android:layout_height="70dp" />
         <View
             android:layout_alignParentBottom="true"
             android:layout_width="match_parent"
