--- a/LaserRadar/Robot/app/src/main/res/layout/item.xml
+++ b/LaserRadar/Robot/app/src/main/res/layout/item.xml
@@ -1,20 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="100dp"
+    android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center"
+    android:background="@color/white"
     >
     <RelativeLayout
-        android:layout_width="match_parent"
+        android:id="@+id/back"
+        android:layout_width="80dp"
         android:orientation="vertical"
         android:layout_gravity="center"
         android:gravity="center"
-        android:layout_height="match_parent">
+        android:layout_height="80dp">
+        <ImageView
+            android:id="@+id/bjzt"
+            android:layout_width="10dp"
+            android:background="@mipmap/bjzt"
+            android:layout_height="10dp"
+            android:layout_alignParentRight="true"/>
         <ImageView
             android:id="@+id/image"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:layout_centerInParent="true"
+            />
+        <ImageView
+            android:id="@+id/image2"
+            android:layout_width="36dp"
+            android:layout_height="36dp"
             android:layout_gravity="center"
             android:layout_centerInParent="true"
             />
@@ -23,20 +38,13 @@
             android:layout_centerInParent="true"
             android:layout_width="match_parent"
             android:gravity="center"
-            android:textColor="@color/white"
-            android:textSize="25sp"
+            android:textColor="#FFFFFF"
+            android:textSize="17sp"
             android:layout_height="match_parent" />
     </RelativeLayout>
-    <TextView
-        android:id="@+id/text"
-        android:layout_marginTop="9dp"
+    <View
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/btn_cancle"
-        android:visibility="gone"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:textSize="13sp"
-        android:textColor="@color/white"
+        android:layout_height="1dp"
+        android:background="#539D72"
         />
 </LinearLayout>
