--- a/LaserRadar/Robot/app/src/main/res/layout/item_spinselect.xml
+++ b/LaserRadar/Robot/app/src/main/res/layout/item_spinselect.xml
@@ -2,7 +2,7 @@
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="match_parent"
     android:layout_width="match_parent"
-    android:textColor="@color/black"
-    android:textSize="17sp"
+    android:textColor="#999999"
+    android:textSize="15sp"
     android:background="@color/white"
-    android:gravity="center"/>
+    android:gravity="right|center"/>
