--- a/LaserRadar/Robot/app/src/main/res/layout/listview_item.xml
+++ b/LaserRadar/Robot/app/src/main/res/layout/listview_item.xml
@@ -1,39 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="80dp"
+    android:layout_height="53dp"
     android:orientation="vertical"
-    android:background="@color/orange"
     android:gravity="center"
+    android:background="#EEEEEE"
     >
-    <View
-        android:layout_width="match_parent"
-        android:background="@color/black"
-        android:layout_height="0.5dp"/>
-
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="80dp">
-
+        android:background="@color/white"
+        android:layout_height="53dp">
         <TextView
             android:id="@+id/text"
             android:layout_width="@dimen/btn_width"
-            android:layout_height="80dp"
-            android:gravity="center"
+            android:layout_height="match_parent"
             android:text="@string/straight"
-            android:layout_centerVertical="true"
-            android:textColor="@color/white"
-            android:textSize="22sp"
+            android:layout_marginLeft="10dp"
+            android:gravity="center|left"
+            android:textColor="#333333"
+            android:textSize="15sp"
             />
         <Button
             android:id="@+id/btn"
-            android:layout_width="17dp"
-            android:layout_height="32dp"
+            android:layout_width="7dp"
+            android:layout_height="13dp"
             android:layout_marginRight="20dp"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
-            android:background="@drawable/btn_qianjin_selector"
+            android:background="@mipmap/xyb"
             />
     </RelativeLayout>
-
 </LinearLayout>
