--- a/LaserRadar/Robot/app/src/main/res/layout/tab_02.xml
+++ b/LaserRadar/Robot/app/src/main/res/layout/tab_02.xml
@@ -8,6 +8,8 @@
         <ListView
             android:id="@+id/added_command"
             android:layout_width="match_parent"
+            android:divider="#EEEEEE"
+            android:layout_marginBottom="10dp"
+            android:dividerHeight="1dp"
             android:layout_height="match_parent"/>
-
 </LinearLayout>
