--- a/LaserRadar/Robot/app/src/main/res/values/colors.xml
+++ b/LaserRadar/Robot/app/src/main/res/values/colors.xml
@@ -160,10 +160,13 @@
     <color name="left_text_color">#D6FBFE</color>
     <color name="right_title_background_color">#3A47A8</color>
     <color name="right_button_background_color">#3768C8</color>
-
     <color name="title_dudutext_color">#E8E8E8</color>
     <color name="battery_power_text_color">#FFFFFF</color>
-
+    <color name="back">#00923F</color>
+    <color name="back_no">#087235</color>
     <color name="vifrification">#00000000</color>
     <color name="line">#7D7D7D</color>
+
+
+    <color name="desk_yellow">#FFB837</color><!--红色 -->
 </resources>
